appId: dev.noboil.movie
---
- launchApp
- assertVisible: "Movie Search"
- tapOn: "Search movies..."
- inputText: "Inception"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Inception"
    timeout: 15000
- tapOn:
    text: "Inception"
    index: 0
- waitForAnimationToEnd
- assertVisible:
    text: "Loading..."
    optional: true
- extendedWaitUntil:
    notVisible:
      text: "Loading..."
    timeout: 15000
- extendedWaitUntil:
    visible: "Inception"
    timeout: 15000
- scrollUntilVisible:
    element: "Release:"
    direction: DOWN
    timeout: 10000
- assertVisible: "Release:"
- scrollUntilVisible:
    element: "Rating:"
    direction: DOWN
    timeout: 5000
- assertVisible: "Rating:"
- scrollUntilVisible:
    element: "Runtime:"
    direction: DOWN
    timeout: 5000
- assertVisible: "Runtime:"
