appId: dev.noboil.movie
---
- launchApp
- tapOn: "Fetch"
- assertVisible: "Fetch by ID"
- tapOn: "TMDB ID (e.g. 27205)"
- inputText: "550"
- tapOn: "Fetch"
- extendedWaitUntil:
    visible: "Fight Club"
    timeout: 15000
- assertVisible: "Fight Club"
- scrollUntilVisible:
    element: "Release:"
    direction: DOWN
    timeout: 5000
- swipe:
    direction: DOWN
    duration: 500
- swipe:
    direction: DOWN
    duration: 500
- tapOn: "550"
- eraseText: 50
- inputText: "680"
- tapOn: "Fetch"
- extendedWaitUntil:
    visible: "Pulp Fiction"
    timeout: 15000
- assertVisible: "Pulp Fiction"
- scrollUntilVisible:
    element: "Release:"
    direction: DOWN
    timeout: 5000
- swipe:
    direction: DOWN
    duration: 500
- swipe:
    direction: DOWN
    duration: 500
- tapOn: "680"
- eraseText: 50
- inputText: "155"
- tapOn: "Fetch"
- extendedWaitUntil:
    visible: "Dark Knight"
    timeout: 15000
